--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="/style/style.css">
+		<link rel="stylesheet" href="style/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Linda Chasserieau Portfolio V2</title>
 	</head>
@@ -33,7 +33,7 @@
 			<section id="whoami" class="module two-cols">
 				<div class="content">
 					<div class="item img-container">
-						<img src="/media/portrait.jpg" alt="">
+						<img src="media/portrait.jpg" alt="">
 					</div>
 					<div class="item text-container">
 						<h2>Linda Chasserieau</h2>
@@ -53,7 +53,7 @@
 					</div>
 					<div class="item">
 						<div class="img-container">
-							<img src="/media/css-3 (2).png" alt="">
+							<img src="media/css-3 (2).png" alt="">
 						</div>
 						<div class="text-container">
 							<h3></h3>
@@ -61,7 +61,7 @@
 					</div>
 					<div class="item">
 						<div class="img-container">
-							<img src="/media/html-5 (1).png" alt="">
+							<img src="media/html-5 (1).png" alt="">
 						</div>
 						<div class="text-container">
 							<h3></h3>
@@ -69,7 +69,7 @@
 					</div>
 					<div class="item">
 						<div class="img-container">
-							<img src="/media/php (1).png" alt="">
+							<img src="media/php (1).png" alt="">
 						</div>
 						<div class="text-container">
 							<h3></h3>
@@ -77,7 +77,7 @@
 					</div>
 					<div class="item">
 						<div class="img-container">
-							<img src="/media/mysql.png" alt="">
+							<img src="media/mysql.png" alt="">
 						</div>
 						<div class="text-container">
 							<h3></h3>
@@ -85,7 +85,7 @@
 					</div>		
 					<div class="item">
 						<div class="img-container">
-							<img src="/media/js.png" alt="">
+							<img src="media/js.png" alt="">
 						</div>
 						<div class="text-container">
 							<h3></h3>
@@ -93,7 +93,7 @@
 					</div>		
 					<div class="item">
 						<div class="img-container">
-							<img src="/media/toupet.png" alt="">
+							<img src="media/toupet.png" alt="">
 						</div>
 						<div class="text-container">
 							<h3></h3>
@@ -101,7 +101,7 @@
 					</div>		
 					<div class="item">
 						<div class="img-container">
-							<img src="/media/photoshop.png" alt="">
+							<img src="media/photoshop.png" alt="">
 						</div>
 						<div class="text-container">
 							<h3></h3>
@@ -109,7 +109,7 @@
 					</div>		
 					<div class="item">
 						<div class="img-container">
-							<img src="/media/illustrateur.png" alt="">
+							<img src="media/illustrateur.png" alt="">
 						</div>
 						<div class="text-container">
 							<h3></h3>
@@ -117,7 +117,7 @@
 					</div>
 					<div class="item">
 						<div class="img-container">
-							<img src="/media/xd.png" alt="">
+							<img src="media/xd.png" alt="">
 						</div>
 						<div class="text-container">
 							<h3></h3>
@@ -135,17 +135,17 @@
 				<div class="gallery-container">
 					<div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
 
-						<img class="image" src="/media/gallery/W_thelegacy_©lindachasserieau.jpg" draggable="false" />
+						<img class="image" src="media/gallery/W_thelegacy_©lindachasserieau.jpg" draggable="false" />
 
-						<img class="image" src="/media/gallery/3D ibbs copie bis.jpg" draggable="false" />
-						<img class="image" src="/media/gallery/ivoirbball2_2021©linda_chasserieau-13-1024x683.jpg" draggable="false" />
-						<img class="image" src="/media/gallery/ivoirbball_2021©linda_chasserieau-13.jpg" draggable="false" />
+						<img class="image" src="media/gallery/3D ibbs copie bis.jpg" draggable="false" />
+						<img class="image" src="media/gallery/ivoirbball2_2021©linda_chasserieau-13-1024x683.jpg" draggable="false" />
+						<img class="image" src="media/gallery/ivoirbball_2021©linda_chasserieau-13.jpg" draggable="false" />
 						
-						<img class="image" src="/media/gallery/36930981_1283427161792085_4838698550671966208_n.jpg" draggable="false" />
-						<img class="image" src="/media/gallery/ballon-six-texture.jpg" draggable="false" />
-						<img class="image" src="/media/gallery/sixpark-visuel.jpg" draggable="false" />
+						<img class="image" src="media/gallery/36930981_1283427161792085_4838698550671966208_n.jpg" draggable="false" />
+						<img class="image" src="media/gallery/ballon-six-texture.jpg" draggable="false" />
+						<img class="image" src="media/gallery/sixpark-visuel.jpg" draggable="false" />
 
-						<img class="image" src="/media/gallery/crocs-cotiers-logo.jpg" draggable="false" />
+						<img class="image" src="media/gallery/crocs-cotiers-logo.jpg" draggable="false" />
 						<div class="gallery-caption">
 							<h4>Créativité</h4>
 							<h4>Vision d'ensemble</h4>
@@ -168,7 +168,7 @@
 					<div id="dev-container">
 						<div class="card">
 							<div class="card--recto">
-								<img src="/media/640px-VeveOgoun.svg.png" alt="image">
+								<img src="media/640px-VeveOgoun.svg.png" alt="image">
 							</div>
 							<div class="display-none" id="content">
 								<p class="card--class" data="roleClass"></p>
@@ -234,7 +234,7 @@
 					</div>
 					<div class="list">
 						<article class="item card" data="webdesign">
-							<div class="img-container" style="background: url('/media/traiteur-depret.jpg') center center no-repeat; background-size: cover;"></div>
+							<div class="img-container" style="background: url('media/traiteur-depret.jpg') center center no-repeat; background-size: cover;"></div>
 							<div class="text-container">
 								<p class="category">webdesign</p>
 								<h3>TRAITEUR DEPRET</h3>
@@ -267,7 +267,7 @@
 							</div>
 						</article>
 						<article class="item card" data="webdesign">
-							<div class="img-container" style="background: url('/media/hotel la gourmandine.jpeg') center center; background-size: cover;"></div>
+							<div class="img-container" style="background: url('media/hotel la gourmandine.jpeg') center center; background-size: cover;"></div>
 							<div class="text-container">
 								<p class="category">webdesign</p>
 								<h3>Hôtel la Gourmandine</h3>
@@ -298,7 +298,7 @@
 							</div>
 						</article>
 						<article class="item card" data="javascript">
-							<div class="img-container" style="background: url('/media/LINDA_CHASSERIEAU_Polaris-1-768x512.png') center center; background-size: cover;"></div>
+							<div class="img-container" style="background: url('media/LINDA_CHASSERIEAU_Polaris-1-768x512.png') center center; background-size: cover;"></div>
 							<div class="text-container">
 								<p class="category">javascript</p>
 								<h3>POLARIS - EXPERIMENTATION</h3>
@@ -331,7 +331,7 @@
 						</article>
 						<article class="item card" data="javascript">
 							<div class="img-container">
-								<img src="/media/telecran-fond-2-copie-768x960.png" alt="">
+								<img src="media/telecran-fond-2-copie-768x960.png" alt="">
 							</div>
 							<div class="text-container">
 								<p class="category">javascript</p>
@@ -365,7 +365,7 @@
 						</article>
 						<article class="item card" data="frontend">
 							<div class="img-container">
-								<img src="/media/stickers-portfolio-miniature.png" alt="">
+								<img src="media/stickers-portfolio-miniature.png" alt="">
 							</div>
 							<div class="text-container">
 								<p class="category">frontend</p>
@@ -399,10 +399,10 @@
 				</div>
 			</section>
 		</main>
-		<script src="/app/generator.js"></script>
-		<script src="/app/utilities.js"></script>
-		<script src="/app/filters.js"></script>
-		<script src="/app/articles.js"></script>
-		<script src="/app/gallery.js"></script>
+		<script src="app/generator.js"></script>
+		<script src="app/utilities.js"></script>
+		<script src="app/filters.js"></script>
+		<script src="app/articles.js"></script>
+		<script src="app/gallery.js"></script>
 	</body>
 </html>
