--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 										<p>Après un long échange avec lui et le partage de quelques référence, j'ai conçu ce site pour lui. Le design met en avant de belles images culinaires chères à ce professionnel des métiers de bouche.</p>
 									</div>
 									<div class="part action">
-										<a class="btn" title="voir Traiteur Depret" target="_blank" href="https://depret-traiteur-62.fr/fr/page/buffets-et-menus">Voir le projet</a>
+										<a class="btn" title="voir Traiteur Depret" target="_blank" href="https://depret-traiteur.com/fr/page/buffets-et-menus">Voir le projet</a>
 										<a class="git nogit" title="projet github" href=""></a>
 									</div>
 								</div>
@@ -301,7 +301,7 @@
 							<div class="img-container" style="background: url('media/LINDA_CHASSERIEAU_Polaris-1-768x512.png') center center; background-size: cover;"></div>
 							<div class="text-container">
 								<p class="category">javascript</p>
-								<h3>POLARIS - EXPERIMENTATION</h3>
+								<h3>EXPERIMENTATION JS</h3>
 							</div>
 							<div class="btn-container">
 								<button class="more">en savoir plus</button>
