--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 								</div>
 								<div class="text-container">
 									<div class="part title">
-										<h2>POLARIS - EXPERIMENTATION</h2>
+										<h2>EXPERIMENTATION JS</h2>
 										<p>javascript</p>
 									</div>
 									<div class="part issue">
