--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 						</div>
 					</div>
 					<a class="portfolio-btn" href="https://drive.google.com/file/d/1NQVjyApBNiV_doyuF36JxzH7wQR8BcMG/view" target="_blank" title="portfolio PDF">
-						<span>GRAPHIC DESIGN & DA</span>
+						<span>DOWNLOAD GRAPHIC DESIGN & DA PORTFOLIO</span>
 					</a>
 				</div>
 
